--- a/LolSceneSwitch/LolSceneSwitch.vcxproj
+++ b/LolSceneSwitch/LolSceneSwitch.vcxproj
@@ -97,7 +97,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OBSApi.lib;User32.lib;shlwapi.lib;ole32.lib;Pathcch.lib</AdditionalDependencies>
+      <AdditionalDependencies>OBSApi.lib;User32.lib;shlwapi.lib;ole32.lib</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>../../OBS-master/OBSApi/Debug</AdditionalLibraryDirectories>
     </Link>
@@ -114,7 +114,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OBSApi.lib;User32.lib;shlwapi.lib;ole32.lib;Pathcch.lib</AdditionalDependencies>
+      <AdditionalDependencies>OBSApi.lib;User32.lib;shlwapi.lib;ole32.lib</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>../../OBS-master/OBSApi/x64/Debug</AdditionalLibraryDirectories>
     </Link>
@@ -137,7 +137,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>OBSApi.lib;User32.lib;shlwapi.lib;ole32.lib;Pathcch.lib</AdditionalDependencies>
+      <AdditionalDependencies>OBSApi.lib;User32.lib;shlwapi.lib;ole32.lib</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>../../OBS-master/OBSApi/Release</AdditionalLibraryDirectories>
     </Link>
@@ -163,7 +163,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>OBSApi.lib;User32.lib;shlwapi.lib;ole32.lib;Pathcch.lib</AdditionalDependencies>
+      <AdditionalDependencies>OBSApi.lib;User32.lib;shlwapi.lib;ole32.lib</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>../../OBS-master/OBSApi/x64/Release</AdditionalLibraryDirectories>
     </Link>
