--- a/LolSceneSwitch.vcxproj
+++ b/LolSceneSwitch.vcxproj
@@ -137,7 +137,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>OBSApi.lib;User32.lib;shlwapi.lib;ole32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>OBSApi.lib;User32.lib;Shell32.lib;Ole32.lib;Shlwapi.lib</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>../../OBS-master/OBSApi/Release</AdditionalLibraryDirectories>
     </Link>
@@ -163,7 +163,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>OBSApi.lib;User32.lib;shlwapi.lib;ole32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>OBSApi.lib;User32.lib;Shell32.lib;Ole32.lib;Shlwapi.lib</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>../../OBS-master/OBSApi/x64/Release</AdditionalLibraryDirectories>
     </Link>
